# VEMS-PROJ

./: CMakeLists.txt  Event_Manager.cpp  Event_Manager.h  README.markdown  README.md  conference.cpp  conference.h  event_dbmanager.cpp  event_dbmanager.h  factory.cpp  factory.h  feedback.cpp  feedback.h  main.cpp  run_prog.cpp  run_prog.h  user.cpp  user.h  users.dbmanger.cpp  users.dbmanger.h  virtualevent.cpp  virtualevent.h  webinar.cpp  webinar.h  workshops.cpp  workshops.h
presentaion and poster/: Final Project Poster (2).pptx
